--- a/pom.xml
+++ b/pom.xml
@@ -90,5 +90,6 @@
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
 		</plugins>
+		<finalName>spring-boot-mongo</finalName>
 	</build>
 </project>
